--- a/views/header.pug
+++ b/views/header.pug
@@ -1,4 +1,13 @@
 body(ng-app="fcc-bp-vote")
+    div(id="fb-root")
+    script.
+        (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
     div(class="container container-outer")
         header
             nav(class="navbar navbar-default")
@@ -23,7 +32,7 @@ body(ng-app="fcc-bp-vote")
                                     a(ui-sref="new" id="button-new") New Poll
                             if typeof username != 'undefined'
                                 li(id="sign-out")
-                                    a(ui-sref="logout" title="Sign out")
+                                    a(accesskey="s" ui-sref="logout" title="Sign out")
                                         i(class="fa fa-sign-out" display="inline !important" aria-hidden="true")
                                         |&nbsp;#{username}
                             else
