--- a/views/newpoll.pug
+++ b/views/newpoll.pug
@@ -9,4 +9,5 @@ h1(id="header-title") New Poll
             label(for="poll-option-1" id="poll-label-1") Option 1
             input(type="text" id="poll-option-1" name="poll-option-1" value="")
         div(id="create-poll-div")
-            input(type="button" id="poll-create" disabled value="Create Poll")
+            button(accesskey="c" id="poll-create" disabled)
+                |Create Poll
