--- a/public/styles.css
+++ b/public/styles.css
@@ -347,6 +347,9 @@
 	padding: 2px 6px 2px 6px;
 	transition: all 300ms;
 }
+.poll-list a:focus li {
+    background-color: hsl(35, 100%, 90%);
+}
 .poll-list li:hover
 {
 	background-color: hsl(70, 100%, 90%);
