--- a/public/styles.css
+++ b/public/styles.css
@@ -90,10 +90,19 @@
 	margin-right: 15px;
 	width: 150px;
 }
-#poll-create::first-letter {
-    text-decoration: underline;
+.poll-submit {
+    background-color: #20207F;
+	border: 2px solid rgba(225,225,245,.8);
+	border-radius: 5px;
+	box-shadow: 0px 0px 15px blue;
+	color: white;
+	display: block;
+	font-size: 16px;
+	font-weight: 400;
+	margin: 10px auto 15px auto;
+	transition: all 300ms;
 }
-#poll-create:disabled
+.poll-create:disabled
 {
 	background-color: #7F7F7F;
 	border: 2px solid rgba(225,225,225,.8);
@@ -104,7 +113,7 @@
 	font-weight: 400;
 	margin: 10px auto 15px auto;
 }
-#poll-create:enabled
+.poll-create:enabled
 {
 	background-color: #207F20;
 	border: 2px solid rgba(225,245,225,.8);
@@ -117,7 +126,7 @@
 	margin: 10px auto 15px auto;
 	transition: all 300ms;
 }
-#poll-create:enabled:focus, #poll-create:enabled:hover
+.poll-create:enabled:focus, .poll-create:enabled:hover
 {
 	box-shadow: 0px 0px 30px yellow;
 }
@@ -437,4 +446,20 @@ input[type="text"]
 {
 	background-color: hsl(49, 100%, 98%);
 	border-radius: 5px;
+}
+main {
+    /* start 'enter' transition */
+    [ui-view].ng-enter {
+        /* transition on enter for .5s */
+        transition: 5.5s;
+
+        /* start with opacity 0 (invisible) */
+        opacity: 0;
+    }
+
+    /* end 'enter' transition */
+    [ui-view].ng-enter-active {
+        /* end with opacity 1 (fade in) */
+        opacity: 1;
+    }
 }
