--- a/views/newpoll.pug
+++ b/views/newpoll.pug
@@ -9,5 +9,6 @@ h1(id="header-title") New Poll
             label(for="poll-option-1" id="poll-label-1") Option 1
             input(type="text" id="poll-option-1" name="poll-option-1" value="")
         div(id="create-poll-div")
-            button(accesskey="c" id="poll-create" disabled)
-                |Create Poll
+            button(accesskey="c" class="poll-create" id="poll-create" disabled)
+                u C
+                | reate Poll
