--- a/views/poll.pug
+++ b/views/poll.pug
@@ -1,3 +1,4 @@
+script(src="poll.js")
 h1(id="header-title") #{poll.question}
 hr(class="title-hr")
 h2(class="poll-author vert-rule-r") Created by #{poll.pollOwner[0].userName}
