--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,7 @@
 h1(id="header-title") freeCodeCamp Voting App
 h2(id="poll-list-label") Polls
 hr(class="title-hr")
-ul(class="poll-list")
+ul(class="poll-list" id="poll-list")
     each poll in polls
         a(ui-sref='poll({id: "' + poll._id + '"})')
             li= poll.question
