This closes #17.  Navbar hamburger menu works.

--- a/views/header.pug
+++ b/views/header.pug
@@ -14,7 +14,7 @@ body(ng-app="fcc-bp-vote")
                 //- http://getbootstrap.com/components/#navbar to explain the DIV
                 div(class="container-fluid")
                     div(class="navbar-header")
-                        button(type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false")
+                        button(type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false")
                             span(class="sr-only") Toggle navigation
                             span(class="icon-bar")
                             span(class="icon-bar")
